# CMake_CPP

./: CMakeLists.txt  main.cpp
inc/: calc.hpp
lib/: CMakeLists.txt  Wifi.cpp  Wifi.hpp
src/: calc.cpp
